# login-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dump.rdb  instagram_comments_lambda.py  lambda_requirements.txt  lambda_telemetry.py  pyproject.toml
bots/: admin.py  apps.py  models.py  tasks.py
bots/integrations/: webhook.py
bots/migrations/: 0001_initial.py  0002_socialaccount_cookies_and_more.py  0003_socialaccount_in_use_socialaccount_last_used_at.py  0004_alter_socialaccount_unique_together.py  0005_socialaccount_consecutive_failures_and_more.py  0006_socialaccount_last_validated_at.py
bots/services/: __init__.py  cookie_service.py  cookie_validator.py  logger.py
project/: celery.py  settings.py  urls.py
