[project]
name = "login-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "django>=6.0",
    "django-celery-beat>=2.1.0",
    "django-celery-results>=2.6.0",
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-botocore>=0.60b1",
    "opentelemetry-instrumentation-django>=0.60b1",
    "opentelemetry-instrumentation-requests>=0.60b1",
    "opentelemetry-instrumentation-celery>=0.60b1",
    "opentelemetry-propagator-b3>=1.39.1",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "boto3>=1.42.28",
    "undetected-chromedriver>=3.5.5",
    "setuptools>=75.8.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
]
prod = [
    "gunicorn>=23.0.0",
]
